# dmm

./: .gitignore  README.md
docs/: FS9721_LP3.protocol.md  README.md  UT60AControlsAndNotes.md  notes.t2t  ut60a-manual.txt
linux/clients/cli/: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  autogen.sh  config.h.in  configure  configure.ac
linux/clients/cli/src/: Makefile.am  Makefile.in  config.h.in  ut60a.c
linux/clients/cli/udev/: 50-ut60a.rules  51-ut60a-plugdev.rules  make-rules
linux/include/: fs9721lp3.h
linux/lib/: .gitignore  Makefile  Makefile.am  Makefile.in  configure  configure.ac
linux/lib/autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2
linux/lib/include/: Makefile.am  Makefile.in  fs9721lp3.h  uni_t.h  uni_t_dmm.h  unit-t.h
linux/lib/src/: Makefile.am  Makefile.in  config.h.in  uni_t.c  uni_t_dmm.c
linux/lib/utils/: Makefile.am  Makefile.in  uni_t_dmm.pc.in
windows/nvda/: .gitignore
windows/nvda/controllerclientcrosscompile/dll/src/: Makefile.32  Makefile.64
windows/nvda/controllerclientcrosscompile/test/src/: build.sh  test_nvda_controller_client.cpp
